--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 server.port=8181
-spring.datasource.url=jdbc:mysql://localhost:3306/serwis
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/serwis
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=create
 spring.thymeleaf.cache=false
+spring.h2.console.enabled=true
+
+
+
+# Create DDL
+#spring.jpa.hibernate.ddl-auto=create
+
+# H2 in local file system allowing other simultaneous connections
+#spring.datasource.url=jdbc:h2:~/test;AUTO_SERVER=TRUE
